k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-service
  namespace: eg58sj-dev
  labels:
    app.kubernetes.io/name: coupon-service
    app.kubernetes.io/part-of: coupon-service
spec:
  # replicas managed by HPA (see hpa.yaml)
  selector:
    matchLabels:
      app.kubernetes.io/name: coupon-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: coupon-service
        app.kubernetes.io/part-of: coupon-service
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      securityContext:
        runAsNonRoot: true
      containers:
        - name: coupon-service
          image: ghcr.io/mrzodeczko-dev/coupon-service:${APP_VERSION}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            failureThreshold: 20
            periodSeconds: 5
      volumes:
        - name: tmp
          emptyDir: {}
