k8s/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: coupon-service
  namespace: eg58sj-dev
  labels:
    app.kubernetes.io/name: coupon-service
    app.kubernetes.io/part-of: coupon-service
spec:
  host: "${OPENSHIFT_ROUTE_HOST}"
  to:
    kind: Service
    name: coupon-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
